cart items align fixed

--- a/finalproject/css/contact.css
+++ b/finalproject/css/contact.css
@@ -119,17 +119,13 @@ nav img{
 .cart-box{
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: space-between;
   border-bottom: 1px solid #eee;
   padding-bottom: 5%;
   padding-top: 5%;
 }
 .cart-img{
   border-radius: 6px;
-}
-.detail-box{
-  margin-left: 15px;
-  margin-right: 5%;
 }
 .detail-box h3{
   margin-bottom: 5%;
